# turnkey

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: codec_bench.rs  protocol_message_bench.rs  validation_bench.rs
crates/turnkey-biometric/: Cargo.toml
crates/turnkey-biometric/src/: lib.rs
crates/turnkey-cli/: Cargo.toml
crates/turnkey-core/: Cargo.toml
crates/turnkey-core/src/: constants.rs  error.rs  lib.rs  types.rs
crates/turnkey-emulator/: Cargo.toml
crates/turnkey-emulator/src/: display.rs  lib.rs  state_machine.rs
crates/turnkey-hardware/: Cargo.toml
crates/turnkey-hardware/src/: devices.rs  error.rs  lib.rs  manager.rs  traits.rs  types.rs
crates/turnkey-hardware/src/mock/: biometric.rs  keypad.rs  mod.rs  rfid.rs
crates/turnkey-keypad/: Cargo.toml
crates/turnkey-keypad/src/: lib.rs
crates/turnkey-network/: Cargo.toml
crates/turnkey-network/src/: client.rs  lib.rs  server.rs
crates/turnkey-network/tests/: tcp_client.rs  tcp_server_integration.rs
crates/turnkey-protocol/: Cargo.toml
crates/turnkey-protocol/src/: builder.rs  codec.rs  commands.rs  field.rs  frame.rs  lib.rs  message.rs  parser.rs  stream_parser.rs  validation.rs
crates/turnkey-protocol/src/commands/: access.rs  command_code.rs  mod.rs  turnstile.rs
crates/turnkey-protocol/tests/: codec_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  protocol_flow_test.rs
crates/turnkey-protocol/tests/common/: mod.rs
crates/turnkey-rfid/: Cargo.toml
crates/turnkey-rfid/src/: lib.rs
crates/turnkey-storage/: Cargo.toml
crates/turnkey-storage/src/: connection.rs  error.rs  lib.rs  messages.rs  transaction.rs  validator.rs
crates/turnkey-storage/src/models/: access_log.rs  card.rs  mod.rs  temporal_validity.rs  user.rs
crates/turnkey-storage/src/repositories/: access_log.rs  card.rs  mod.rs  user.rs
crates/turnkey-storage/tests/: integration_database.rs
crates/turnkey-turnstile/: Cargo.toml
docs/: data-formats.md  development-workflow.md  emulator-architecture.md  emulator-configuration.md  emulator-modes.md  enum-dispatch-pattern-async-traits.md  github-workflow-summary.md  henry-client-emulator-commands.md  tcp-client-detailed-spec.md  tui-pt.md  tui-specification.md  turnkey-complete-architecture-en.md  turnkey-complete-architecture-pt.md  turnkey-protocol-guide-en.md  turnkey-protocol-guide-pt.md
docs/issues/: 65-tcp-client-detailed-spec.md
migrations/: 001_create_users_table.sql  002_create_cards_table.sql  003_create_biometric_templates_table.sql  004_create_access_logs_table.sql  005_seed_test_data.sql
src/: main.rs
