[package]
name = "turnkey-hardware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Hardware support features (future)
hardware-usb = []
hardware-serial = []
hardware-wiegand = []
hardware-pcsc = []
hardware-spi = []
hardware-controlid = []
hardware-digitalpersona = []

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
