[package]
name = "turnkey-network"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["net", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Protocol
turnkey-protocol = { path = "../turnkey-protocol" }
turnkey-core = { path = "../turnkey-core" }

# Utilities
bytes = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
