[package]
name = "turnkey-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
turnkey-core = { path = "../turnkey-core" }
serde.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
rstest = "0.26"
tokio = { workspace = true, features = ["test-util", "macros"] }
futures = "0.3"
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "codec_bench"
harness = false
path = "../../benches/codec_bench.rs"

[[bench]]
name = "validation_bench"
harness = false
path = "../../benches/validation_bench.rs"

[[bench]]
name = "protocol_message_bench"
harness = false
path = "../../benches/protocol_message_bench.rs"
